; ModuleID = '/home/carl/AnghaBench/i3/i3-dump-log/extr_main.c_check_for_wrap.c'
source_filename = "/home/carl/AnghaBench/i3/i3-dump-log/extr_main.c_check_for_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i64, i32 }

@wrap_count = common dso_local global i64 0, align 8
@header = common dso_local global %struct.TYPE_2__* null, align 8
@logbuffer = common dso_local global i32 0, align 4
@walk = common dso_local global i32 0, align 4
@STDOUT_FILENO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @check_for_wrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @check_for_wrap() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i64, i64* @wrap_count, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @header, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %3, %6
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %28

9:                                                ; preds = %0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** @header, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %11, align 8
  store i64 %12, i64* @wrap_count, align 8
  %13 = load i32, i32* @logbuffer, align 4
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @header, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 1
  %16 = load i32, i32* %15, align 8
  %17 = add nsw i32 %13, %16
  %18 = load i32, i32* @walk, align 4
  %19 = sub nsw i32 %17, %18
  store i32 %19, i32* %2, align 4
  %20 = load i32, i32* @STDOUT_FILENO, align 4
  %21 = load i32, i32* @walk, align 4
  %22 = load i32, i32* %2, align 4
  %23 = call i32 @swrite(i32 %20, i32 %21, i32 %22)
  %24 = load i32, i32* @logbuffer, align 4
  %25 = sext i32 %24 to i64
  %26 = add i64 %25, 4
  %27 = trunc i64 %26 to i32
  store i32 %27, i32* @walk, align 4
  store i32 1, i32* %1, align 4
  br label %28

28:                                               ; preds = %9, %8
  %29 = load i32, i32* %1, align 4
  ret i32 %29
}

declare dso_local i32 @swrite(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
